--- a/lift_simulation.html
+++ b/lift_simulation.html
@@ -8,7 +8,7 @@
 <body>
     <h2 style="background-color:DodgerBlue; ">Lift Simulation</h2>
     <style>
-      div {
+      div{
         background-color: lightblue;
         height: 20 px;
         width: 25px;
@@ -17,6 +17,19 @@
         margin: 150px;
       }
       </style>
+
+      <div class = "FLOORS">
+        <div class ="FLOORS" style="border: 2px black;"></div>
+        <div class= "lift_buttons"></div>
+          <button class="lift-open" data-lift-num="0"></button>
+          <button class="lift-close" data-lift-num="0"></button>
+
+
+
+      </div>
+
+      <div class ="left_door" ></div>
+      <div class ="right_door" ></div>
 </body>
 </html>
 
